Loading btx file in multires modifier is not working since 2.80 #74686

Closed
opened 2020-03-12 15:14:33 +01:00 by Christophe Schollhammer · 10 comments

Blender Version
Broken: 2.80-2.81-2.82-2.83
Worked: 2.79b

Short description of error
When I try to load a btx file in multires modifier the mesh get exploded.
2020-03-12_05691.jpg
The console gives :

ERROR (bke.customdata): K:\BlenderGit\blender\source\blender\blenkernel\intern\customdata.c:662 layerRead_mdisps: failed to read multires displacement 0/24 0

Exact steps for others to reproduce the error

  • Open blender
  • Select Cube
  • Add multires modifier
  • Subdivide 3 times
  • Duplicate the Cube
  • For each Cube, in multires modifier click on save external to save a btx file
    You will save two files - Cube.btx and Cube.001.btx
  • With Cube.001 selected, in multires modifier, change the filepath input to load the Cube.btx
    The mesh is exploded.
    The same happens if you upload another btx file to the other Cube

Cube.001.btx
Cube.004.btx
Cube.005.btx
279_ok_Cube.btx
Cubeno.btx
Cube.btx

**Blender Version** Broken: 2.80-2.81-2.82-2.83 Worked: 2.79b **Short description of error** When I try to load a btx file in multires modifier the mesh get exploded. ![2020-03-12_05691.jpg](https://archive.blender.org/developer/F8402305/2020-03-12_05691.jpg) The console gives : ``` ERROR (bke.customdata): K:\BlenderGit\blender\source\blender\blenkernel\intern\customdata.c:662 layerRead_mdisps: failed to read multires displacement 0/24 0 ``` **Exact steps for others to reproduce the error** - Open blender - Select Cube - Add multires modifier - Subdivide 3 times - Duplicate the Cube - For each Cube, in multires modifier click on save external to save a btx file You will save two files - `Cube.btx` and `Cube.001.btx` - With `Cube.001` selected, in multires modifier, change the filepath input to load the `Cube.btx` The mesh is exploded. The same happens if you upload another btx file to the other Cube [Cube.001.btx](https://archive.blender.org/developer/F8402297/Cube.001.btx) [Cube.004.btx](https://archive.blender.org/developer/F8402298/Cube.004.btx) [Cube.005.btx](https://archive.blender.org/developer/F8402299/Cube.005.btx) [279_ok_Cube.btx](https://archive.blender.org/developer/F8402300/279_ok_Cube.btx) [Cubeno.btx](https://archive.blender.org/developer/F8402301/Cubeno.btx) [Cube.btx](https://archive.blender.org/developer/F8402302/Cube.btx)

Added subscriber: @cscholl

Added subscriber: @cscholl

Added subscribers: @fclem, @iss

Added subscribers: @fclem, @iss

I don't really know if this is intended use. @fclem do you know?

I don't really know if this is intended use. @fclem do you know?

Added subscribers: @Sergey, @mano-wii

Added subscribers: @Sergey, @mano-wii

In #74686#890483, @iss wrote:
I don't really know if this is intended use. @fclem do you know?

This seems to be more a problem in the multires modifier than drawing.
I may be wrong, but I think it was @Sergey who worked on it.

> In #74686#890483, @iss wrote: > I don't really know if this is intended use. @fclem do you know? This seems to be more a problem in the multires modifier than drawing. I may be wrong, but I think it was @Sergey who worked on it.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Removed subscriber: @fclem

Removed subscriber: @fclem
Sergey Sharybin self-assigned this 2020-03-13 15:21:26 +01:00

Weird. Worked on some complex meshes I've tested but not with the simple steps from this report. Go figure :)

Will have a look.

Weird. Worked on some complex meshes I've tested but not with the simple steps from this report. Go figure :) Will have a look.

This issue was referenced by de30fda04e

This issue was referenced by de30fda04e8d84a173e929a0f3d9d8c71bcc4bbf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74686
No description provided.