source/blender/blenkernel/intern/multires_reshape.c
@@ -149,8 +149,7 @@ bool multiresModifier_reshapeFromCCG(const int tot_level,
     return false;
   }
 
-  CustomData_external_read(
-      &coarse_mesh->ldata, &coarse_mesh->id, CD_MASK_MDISPS, coarse_mesh->totloop);
+  multires_ensure_external_read(coarse_mesh, reshape_context.top.level);
 
   multires_reshape_store_original_grids(&reshape_context);
   multires_reshape_ensure_grids(coarse_mesh, reshape_context.top.level);
